--- a/src/main/java/application/ventana.form
+++ b/src/main/java/application/ventana.form
@@ -1226,6 +1226,9 @@
     <Container class="javax.swing.JInternalFrame" name="RegistrarInstitucionCU">
       <Properties>
         <Property name="title" type="java.lang.String" value="Registar Institucion"/>
+        <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[397, 301]"/>
+        </Property>
         <Property name="visible" type="boolean" value="true"/>
       </Properties>
       <AccessibilityProperties>
@@ -1244,11 +1247,13 @@
                       <Component id="jButtonCancelarInst" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jTextFieldDescInstitucion" min="-2" pref="113" max="-2" attributes="0"/>
-                      <Component id="jTextFieldUrl" min="-2" pref="113" max="-2" attributes="0"/>
-                      <Component id="jTextFieldNombreInstitucion" alignment="0" min="-2" pref="113" max="-2" attributes="0"/>
-                      <Component id="jButtonAceptarInt" alignment="1" min="-2" pref="77" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="1" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="jTextFieldDescInstitucion" min="-2" pref="113" max="-2" attributes="0"/>
+                          <Component id="jTextFieldUrl" min="-2" pref="113" max="-2" attributes="0"/>
+                          <Component id="jTextFieldNombreInstitucion" alignment="0" min="-2" pref="113" max="-2" attributes="0"/>
+                      </Group>
+                      <Component id="jButtonAceptarInt" min="-2" pref="97" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="68" max="32767" attributes="0"/>
               </Group>
